--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "online_multiplayer"
 version = "0.1.0"
 edition = "2021"
-default-run = "client"
+default-run = "online_multiplayer"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
